# robotprogramming-project-2526

./: README.md  Task.md  pyproject.toml
documentation/: Documentation.md  Task.md
notebooks/: Flyby-Optimization-Interactive-with-documentation.ipynb  Flyby-Optimization-Interactive.ipynb  Flyby-Optimization.ipynb
src/: IPEnvironmentShapeRobot.py  analysis.py  benchmarks.py  collision_checker.py  environment.py  evaluation.py  interactive_widgets.py  main.ipynb  optimize_path.py  project_environment.ipynb
src/notebooks/: project_environment.ipynb
src/planners/: IPBasicPRM.py  IPPRMBase.py
