# 1. UV installieren
# 2. run: uv sync
# 3. activate environment: source .venv/bin/activate

[project]
name = "robot-programming-env"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [ 
	"pandas",
	"matplotlib", 
	"scikit-learn", 
	"jupyterlab",
    "networkx",
    "shapely",
    "numpy",
	"tqdm",
    "ipywidgets",
	"sympy",
]
